2002-08-20  Ross Burton  <ross@burtonini.com>

	* glines/Makefile.am, gnibbles/Makefile.am, gnobots2/Makefile.am,
	gnome-stones/Makefile.am, gnometris/Makefile.am,
	gnomine/Makefile.am, gnotravex/Makefile.am, gnotski/Makefile.am,
	gtali/Makefile.am, iagno/Makefile.am, mahjongg/Makefile.am,
	same-gnome/Makefile.am, xbill/Makefile.am: Change the permissions
	of the executables from 2111 to 2555, so that gdb can be used on
	stock installs. Patch from Samuel Stringham, fixing #86057.
	
2002-08-11  Ross Burton  <ross@burtonini.com>

	* aisleriot/sol.desktop.in, freecell/src/freecell.desktop.in,
	gataxx/gataxx.desktop.in, glines/glines.desktop.in,
	gnect/data/gnect.desktop.in, gnibbles/gnibbles.desktop.in,
	gnobots2/gnobots2.desktop.in,
	gnome-stones/gnome-stones.desktop.in,
	gnometris/gnometris.desktop.in, gnomine/gnomine.desktop.in,
	gnotravex/gnotravex.desktop.in, gnotski/gnotski.desktop.in,
	gtali/gtali.desktop.in, iagno/iagno.desktop.in,
	iagno2/iagno2.desktop.in, mahjongg/mahjongg.desktop.in,
	same-gnome/same-gnome.desktop.in, xbill/xbill.desktop.in: Update
	the desktop files so that they validate with
	desktop-file-validator, and ensure the Categories keyword is
	correct.

2002-08-02  Ross Burton <ross@burtonini.com>

	* po/POTFILES.in: Added the GConf schema files so they can be
	translated.

	* freecell/src/freecell.schemas.in, gataxx/gataxx.schemas.in,
	gnect/data/gnect.schemas.in, gnometris/gnometris.schemas.in,
	gnomine/gnomine.schemas.in, gtali/gtali.schemas.in,
	iagno/iagno.schemas.in, mahjongg/mahjongg.schemas.in,
	same-gnome/same-gnome.schemas.in: Rename all .schema files to
	.schema.in so that the translators can have their wicked way.

	* freecell/src/Makefile.am, gataxx/Makefile.am,
	gnect/data/Makefile.am, gnometris/Makefile.am,
	gnomine/Makefile.am, gtali/Makefile.am, iagno/Makefile.am,
	mahjongg/Makefile.am, same-gnome/Makefile.am: Do the secret mojo
	correctly to get translated .schema files.  All in all this fixes
	#89366.
