@@ -191,6 +191,8 @@ gnotravex/Makefile
 gnotravex/help/Makefile
 gnotravex/help/C/Makefile
 gnotski/Makefile
+gnotski/help/Makefile
+gnotski/help/C/Makefile
 gnibbles/Makefile
 gnibbles/help/Makefile
 gnibbles/help/C/Makefile
