@@ -1,0 +1,6 @@
+Makefile.in
+Makefile
+omf_timestamp
+index.html
+gnotski
+gnotski-C.omf.out
