@@ -1,0 +1,8 @@
+figdir = figures
+docname = gnotski
+lang = C
+omffile = gnotski-C.omf
+entities = legal.xml
+include $(top_srcdir)/xmldocs.make
+dist-hook: app-dist-hook
+
