@@ -1,0 +1,357 @@
+<?xml version="1.0"?>
+<!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
+"http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
+  <!ENTITY legal SYSTEM "legal.xml">
+  <!ENTITY appversion "2.0">
+  <!ENTITY manrevision "2.0">
+  <!ENTITY date "13 August 2002">
+  <!ENTITY app "<application>GNOME Klotski</application>">
+  <!-- Information about the entities
+       The legal.xml file contains legal information, there is no need to edit the file. 
+       Use the appversion entity to specify the version of the application.
+       Use the manrevision entity to specify the revision number of this manual.
+       Use the date entity to specify the release date of this manual.
+       Use the app entity to specify the name of the application. -->
+]>
+
+<!-- 
+  Maintained by the GNOME Documentation Project
+  http://developer.gnome.org/projects/gdp
+  Template version: 2.0 beta
+  Template last modified Apr 11, 2002
+-->
+<!-- =============Document Header ============================= -->
+<article id="index" lang="en">
+<!-- please do not change the id; for translations, change lang to -->
+<!-- appropriate code -->
+  <articleinfo> 
+    <title>&app; Manual V&manrevision;</title>       
+    <copyright> 
+      <year>2002</year> 
+      <holder>Andrew Sobala</holder> 
+    </copyright>
+<!-- translators: uncomment this:
+
+  <copyright>
+   <year>2002</year>
+   <holder>ME-THE-TRANSLATOR (Latin translation)</holder>
+  </copyright>
+
+   -->
+<!-- An address can be added to the publisher information.  If a role is 
+     not specified, the publisher/author is the same for all versions of the 
+     document.  -->
+    <publisher> 
+      <publishername> GNOME Documentation Project </publishername> 
+    </publisher> 
+
+   &legal;
+   <!-- This file  contains link to license for the documentation (GNU FDL), and 
+        other legal stuff such as "NO WARRANTY" statement. Please do not change 
+	any of this. -->
+
+    <authorgroup> 
+      <author> 
+		<firstname>Andrew</firstname> 
+		<surname>Sobala</surname> 
+		<affiliation> 
+	  		<orgname>GNOME Documentation Project</orgname> 
+	  		<address> <email>andrew@sobala.net</email> </address> 
+		</affiliation> 
+      </author> 
+
+	<othercredit role="author">
+		<firstname>Lars</firstname>
+		<surname>Rydlinge</surname>
+		<affiliation>
+			<orgname>GNOME Project</orgname> <!-- FIXME: Is this right? -->
+			<address> <email> Lars.Rydlinge@HIG.SE </email> </address>
+		</affiliation>
+	</othercredit>
+
+	<othercredit role="maintainer">
+		<firstname>Ross</firstname>
+		<surname>Burton</surname>
+		<affiliation>
+			<orgname>GNOME Project</orgname> <!-- FIXME: Is this right? -->
+			<address> <email> ross@burtonini.com </email> </address>
+		</affiliation>
+	</othercredit>
+
+<!-- This is appropriate place for other contributors: translators,
+     maintainers,  etc.
+     
+      <othercredit role="translator">
+		<firstname>Latin</firstname> 
+		<surname>Translator 1</surname> 
+		<affiliation> 
+	  		<orgname>Latin Translation Team</orgname> 
+	  		<address> <email>translator@gnome.org</email> </address> 
+		</affiliation>
+		<contrib>Latin translation</contrib>
+      </othercredit>
+-->
+    </authorgroup>
+
+
+<!-- According to GNU FDL, revision history is mandatory if you are -->
+<!-- modifying/reusing someone else's document.  If not, you can omit it. -->
+<!-- Remember to remove the &manrevision; entity from the revision entries other
+-->
+<!-- than the current revision. -->
+<!-- The revision numbering system for GNOME manuals is as follows: -->
+<!-- * the revision number consists of two components -->
+<!-- * the first component of the revision number reflects the release version of the GNOME desktop. -->
+<!-- * the second component of the revision number is a decimal unit that is incremented with each revision of the manual. -->
+<!-- For example, if the GNOME desktop release is V2.x, the first version of the manual that -->
+<!-- is written in that desktop timeframe is V2.0, the second version of the manual is V2.1, etc. -->
+<!-- When the desktop release version changes to V3.x, the revision number of the manual changes -->
+<!-- to V3.0, and so on. -->  
+    <revhistory>
+<!--
+      <revision> 
+		<revnumber>Full title of previous manual.</revnumber> 
+		<date>Release date of previous manual.</date> 
+		<revdescription> 
+	  		<para role="author">Documentation Writer 1 
+	    	<email>docwriter1@gnome.org</email>
+	  		</para>
+	  		<para role="publisher">GNOME Documentation Project</para>
+		</revdescription> 
+      </revision> 
+-->
+
+	<revision>
+		<revnumber>V2.0</revnumber>
+		<date>13 August 2002</date>
+		<revdescription>
+	  		<para role="author">Andrew Sobala
+			<email>andrew@sobala.net</email>
+	  		</para>
+	  		<para role="publisher">GNOME Documentation Project</para>
+		</revdescription> 
+	</revision>
+
+    </revhistory> 
+
+    <releaseinfo>This manual describes version &appversion; of GNOME Klotski.
+    </releaseinfo> 
+    <legalnotice> 
+      <title>Feedback</title> 
+      <para>To report a bug or make a suggestion regarding the &app; application or
+      this manual, follow the directions in the <ulink url="ghelp:gnome-feedback"
+	  type="help">GNOME Feedback Page</ulink>. 
+      </para>
+<!-- Translators may also add here feedback address for translations -->
+    </legalnotice> 
+  </articleinfo> 
+
+  <indexterm zone="index"> 
+    <primary>GNOME Klotski</primary> 
+  </indexterm> 
+
+<!-- ============= Document Body ============================= -->
+<!-- ============= Introduction ============================== -->
+  <sect1 id="gnotski-introduction"> 
+	<title>Introduction</title> 
+	<para>The &app; application is a clone of the Klotski game. The objective is to move the patterned block to 
+	the area bordered by green markers.</para>
+
+	<para> &app; was written by Lars Rydlinge
+	(<email>Lars.Rydlinge@HIG.SE</email>).</para>
+
+	<para>&app; is included in the gnome-games package, which is part of the GNOME desktop environment. 
+	This document describes version &appversion; of &app;. </para>
+
+	<para> This program is distributed under the terms of the GNU
+	General Public license as published by the Free Software
+	Foundation; either version 2 of the License, or (at your option)
+	any later version. A copy of this license can be found at this
+	<ulink url="ghelp:gpl" type="help">link</ulink>, or in the file
+	COPYING included with the source code of this program. </para>
+
+	<para>
+	To report a bug or make a suggestion regarding this application or
+	this manual, follow the directions in this 
+	<ulink url="ghelp:gnome-feedback"   type="help">document</ulink>.
+	</para>
+  </sect1>
+
+<!-- ===========Objective ============================== -->
+<sect1 id="gnotski-objective">
+	<title>Objective</title>
+	<para>The objective of &app; is to move the patterned block to the green markers in as few moves as 
+	possible. You do this by moving the blocks one at a time with the mouse until you can get the patterned
+	block to the markers.
+
+	<!-- ==== Figure ==== -->
+	<figure id="gnotski-figure-win"> 
+		<title>The winning move</title> 
+		<screenshot> 
+			<mediaobject> 
+			<imageobject>
+				<imagedata fileref="figures/gnotski_win.png" format="PNG"/> 
+			</imageobject>
+			<textobject> 
+				<phrase>The patterned block should be moved to the space bordered by the green
+				markers.</phrase> 
+			</textobject> 
+	        	</mediaobject> 
+		</screenshot>
+	</figure></para>
+	<!-- ==== End of Figure ==== -->
+</sect1>
+
+<!-- =========== Getting Started ============================== -->
+
+  <sect1 id="gnotski-playing"> 
+	<title>Playing &app;</title> 
+	<para>
+	<itemizedlist> 
+	<listitem> 
+		<para> 
+		<xref linkend="gnotski-start"/></para> 
+	</listitem>
+	<listitem> 
+		<para> 
+		<xref linkend="gnotski-ui"/></para> 
+	</listitem> 
+	<listitem> 
+		<para> 
+		<xref linkend="gnotski-new-game"/></para> 
+	</listitem> 
+	<listitem> 
+		<para> 
+		<xref linkend="gnotski-moving"/></para> 
+	</listitem>
+	</itemizedlist> </para>
+
+	<!-- =========== To start gnotski ============================== -->
+	<sect2 id="gnotski-start">
+		<title>To Start &app;</title>
+		<para>You can start &app; from the Applications menu by choosing
+		<menuchoice>
+			<guisubmenu>Games</guisubmenu>
+		    	<guimenuitem>Gnotski</guimenuitem>
+		</menuchoice>.</para>
+	</sect2>
+
+	<!-- =========== The main window ============================== -->
+	<sect2 id="gnotski-ui">
+		<title>The main window</title>
+		<para>When you start <application>&app;</application>, the following window is displayed.</para>
+
+		<!-- ==== Figure ==== -->
+		<figure id="gnotski-figure-mainwindow"> 
+			<title>&app; Start Up Window</title> 
+			<screenshot> 
+				<mediaobject> 
+				<imageobject>
+					<imagedata fileref="figures/gnotski_start_window.png" format="PNG"/> 
+				</imageobject>
+				<textobject> 
+					<phrase>Shows &app; main window. Contains titlebar, menubar, game area
+					and statusbar. Menubar contains Game and Help menus. </phrase> 
+				</textobject> 
+		        	</mediaobject> 
+			</screenshot>
+		</figure>
+		<!-- ==== End of Figure ==== -->
+
+		<para>The &app; window contains the following elements:
+		<variablelist>
+		<varlistentry>
+			<term>Menubar</term>
+			<listitem>
+			<variablelist>
+			<varlistentry>
+				<term>Game menu</term>
+				<listitem>
+				<para>The game menu allows you to start new games, view the highest scores and
+				quit the program.</para>
+				</listitem>
+			</varlistentry>
+			<varlistentry>
+				<term>Help menu</term>
+				<listitem>
+				<para>The help menu allows you to view the documentation for &app;</para>
+				</listitem>
+			</varlistentry>
+			</variablelist>
+			</listitem>
+		</varlistentry>
+		<varlistentry>
+			<term>Game area</term>
+			<listitem>
+			<para>The game area shows the blocks in the current game. You can drag the blocks around with 
+			the mouse as described in <xref linkend="gnotski-moving"/>.
+			</para>
+			</listitem>
+		</varlistentry>
+<!-- statusbar "moves" is buggy (see known bugs for bug #) -->
+		<varlistentry>
+			<term>Statusbar</term>
+			<listitem>
+			<para>The statusbar shows how many moves you have taken so far.</para>
+			</listitem>
+		</varlistentry>
+		</variablelist></para>
+
+		<note><para>When you first start the application, the Game window shows a practise screen. You
+		have to start a new game using the <guimenu>Game menu</guimenu> before you can play
+		&app; </para></note>
+	</sect2>
+
+	<!-- =========== Starting a new game ============================== -->
+	<sect2 id="gnotski-new-game">
+		<title>Starting a new game</title>
+		<para>Use the <guimenu>Game menu</guimenu> to start a new game. The  submenus named
+		<guisubmenu>Novice</guisubmenu>, <guisubmenu>Medium</guisubmenu> and
+		<guisubmenu>Advanced</guisubmenu> allow you to start a new game with these three difficulty levels.
+		In each submenu, there is a series of numbers. Each number refers to a game scenario. The scenarios
+		in each submenu get increasingly difficult.
+		</para>
+		<example>
+		<title>Starting a game</title>
+		<para>To start the easiest game provided, choose
+		<menuchoice>
+			<guimenu>Game</guimenu>
+			<guisubmenu>Novice</guisubmenu>
+			<guimenuitem>1</guimenuitem>
+		</menuchoice>
+		</para></example>
+	</sect2>
+
+	<!-- ===========Moving blocks ============================== -->
+	<sect2 id="gnotski-moving">
+		<title>Moving blocks</title>
+		<para>To move a block, click on it, hold down the mouse button and drag it to its new location.
+		<!-- FIXME: are there a11y alternatives? -->
+		You 	cannot move the green blocks or the block that borders the game. You cannot move a block to a
+		space already occupied by another block, with the exception that you may move the patterned block 
+		through the green blocks to win.
+		</para>
+	</sect2>
+
+</sect1>
+
+<!-- ============= Bugs ================================== -->
+<sect1 id="gnotski-bugs">
+	<title>Known Bugs and Limitations</title>
+	<para>
+	<itemizedlist>
+		<listitem>
+		<!-- BUG #90546 -->
+		<para>Under some font sizes, the number of moves taken is not visible.</para>
+		</listitem>
+
+		<!-- BUG #84235 : I (Andrew Sobala) am currently fixing this bug across gnome-games -->
+		<listitem>
+		<para>Before the game has been played once, the "High scores" menu item is non-functional.</para>
+		</listitem>
+
+	</itemizedlist>
+	</para>
+</sect1>
+
+</article>
