@@ -1,3 +1,13 @@
+2002-08-21  Chris Lyttle  <chris@wilddev.net>
+
+	* configure.in: add gnotski docs dirs
+	* gnotski/gnotski.c: add help menu button 'help'
+	* gnotski/help, gnotski/help/Makefile.am, gnotski/help/C/Makefile.am,
+	gnotski/help/C/gnotski-C.omf, gnotski/help/C/gnotski.xml,
+	gnotski/help/C/legal.xml, gnotski/help/C/figures,
+	gnotski/help/C/figures/gnotski_start_window.png,
+	gnotski/help/C/figures/gnotski_win.png: add help docs
+
 2002-08-20  Ross Burton  <ross@burtonini.com>
 
 	* glines/Makefile.am, gnibbles/Makefile.am, gnobots2/Makefile.am,
